--- a/web/login.html
+++ b/web/login.html
@@ -1,5 +1,4 @@
 
-<%@ page contentType="text/html;charset=UTF-8" language="java" %><!DOCTYPE html>
 <html>
 <style>
 
@@ -119,7 +118,7 @@
 
 <div id="id01" class="modal">
 
-    <form class="modal-content animate" action="/action_page.php">
+    <form class="modal-content animate" action="LoginServlet">
         <div class="imgcontainer">
             <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
             <img src="loginavatar.jpg" alt="Avatar" class="avatar">
@@ -127,10 +126,10 @@
 
         <div class="containerlog">
             <label><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input type="text" placeholder="Enter Username" name="nick" required>
 
             <label><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input type="password" placeholder="Enter Password" name="password" required>
 
             <button type="submit">Login</button>
             <input type="checkbox" checked="checked"> Remember me
