--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>No Podaj Podaj</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -17,6 +17,13 @@
         /* Remove the jumbotron's default bottom margin */
         .jumbotron {
             margin-bottom: 0;
+        }
+
+        .bgimg {
+            background-image: url("bannerNPP.png");
+            margin-left: 70px;
+            margin-top: 70px;
+            background-size: 100% 100%;
         }
 
         /* Add a gray background color and some padding to the footer */
@@ -45,10 +52,10 @@
     });
 </script>
 
-<div class="jumbotron">
+<div class="jumbotron bgimg" style="height: 256px;">
     <div class="container text-center">
-        <h1>NoPodajPodaj</h1>
-        <p>Znajdź i zarezerwuj boisko w okolicy</p>
+        <h1></h1>
+        <p></p>
     </div>
 </div>
 
@@ -56,56 +63,143 @@
     <div class="row">
         <div class="col-sm-4">
             <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
+                <div class="panel-heading">ZNAJDŹ MIEJSCE DLA SIEBIE</div>
                 <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+                <div class="panel-footer">Kilka kliknięć dzieli Cię od uprawiania sportu na idealnym obiekcie sportowym!</div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="panel panel-danger">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
+                <div class="panel-heading">JESTEŚ WŁAŚCICIELEM HALI / BOISKA?</div>
                 <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+                <div class="panel-footer">Udostępnij swoją miejscówkę innym i zacznij zarabiać.</div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="panel panel-success">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
+                <div class="panel-heading">SPRÓBUJ I ZOBACZ SAM!</div>
                 <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
+                <div class="panel-footer">Zaledwie kilka kliknięć dzieli Cię od pokopania w gałę!</div>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 1</p>
+                    <img src="" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej informacji</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div><br>
 
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">BLACK FRIDAY DEAL</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-                <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-            </div>
-        </div>
-    </div>
-</div><br><br>
 
 <footer class="container-fluid text-center">
-    <p>Online Store Copyright</p>
+    <p>NoPodajPodaj Copyright</p>
     <form class="form-inline">Get deals:
         <input type="email" class="form-control" size="50" placeholder="Email Address">
         <button type="button" class="btn btn-danger">Sign Up</button>
