--- a/web/index.html
+++ b/web/index.html
@@ -64,21 +64,21 @@
         <div class="col-sm-4">
             <div class="panel panel-primary">
                 <div class="panel-heading">ZNAJDŹ MIEJSCE DLA SIEBIE</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-body"><img src="indeximg1.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
                 <div class="panel-footer">Kilka kliknięć dzieli Cię od uprawiania sportu na idealnym obiekcie sportowym!</div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="panel panel-danger">
                 <div class="panel-heading">JESTEŚ WŁAŚCICIELEM HALI / BOISKA?</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-body"><img src="indeximg2.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
                 <div class="panel-footer">Udostępnij swoją miejscówkę innym i zacznij zarabiać.</div>
             </div>
         </div>
         <div class="col-sm-4">
             <div class="panel panel-success">
                 <div class="panel-heading">SPRÓBUJ I ZOBACZ SAM!</div>
-                <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
+                <div class="panel-body"><img src="indeximg3.jpg" class="img-responsive" style="width:100%" alt="Image"></div>
                 <div class="panel-footer">Zaledwie kilka kliknięć dzieli Cię od pokopania w gałę!</div>
             </div>
         </div>
@@ -88,7 +88,7 @@
             <div class="col-sm-3">
                 <div class="well">
                     <p>Pozycja nr 1</p>
-                    <img src="" class="img-circle" height="55" width="55" alt="Avatar">
+                    <img src="indexfieldicon.png" class="img-circle" height="55" width="55" alt="Avatar">
                 </div>
             </div>
             <div class="col-sm-9">
@@ -103,7 +103,7 @@
             <div class="col-sm-3">
                 <div class="well">
                     <p>Pozycja nr 2</p>
-                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                    <img src="indexfieldicon.png" class="img-circle" height="55" width="55" alt="Avatar">
                 </div>
             </div>
             <div class="col-sm-9">
@@ -118,23 +118,7 @@
             <div class="col-sm-3">
                 <div class="well">
                     <p>Pozycja nr 2</p>
-                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-                </div>
-            </div>
-            <div class="col-sm-9">
-                <div class="well">
-                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-sm-3">
-                <div class="well">
-                    <p>Pozycja nr 2</p>
-                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                    <img src="indexfieldicon.png" class="img-circle" height="55" width="55" alt="Avatar">
                 </div>
             </div>
             <div class="col-sm-9">
@@ -150,7 +134,23 @@
             <div class="col-sm-3">
                 <div class="well">
                     <p>Pozycja nr 2</p>
-                    <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+                    <img src="indexfieldicon.png" class="img-circle" height="55" width="55" alt="Avatar">
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="well">
+                    <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+                    <button type="submit" class="btn btn-default" onclick="location.href = 'detailInformations.html';" style="width: 200px">Więcej infromacji</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="well">
+                    <p>Pozycja nr 2</p>
+                    <img src="indexfieldicon.png" class="img-circle" height="55" width="55" alt="Avatar">
                 </div>
             </div>
             <div class="col-sm-9">
